OCSP requests shouldn't use the HTTP cache
Categories
(Core :: Networking: HTTP, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | fixed |
People
(Reporter: valentin, Assigned: valentin)
References
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
+++ This bug was initially created as a clone of Bug #1670506 +++
(In reply to Valentin Gosu [:valentin] (he/him) from bug 1670506 comment #10)
I think this issue also affects desktop users in PB mode, where we shouldn't be saving anything persistently, right?
Technically we should be doing the right thing here - we set the originAttributes to the privateBrowsingId.But sometimes it's possible we don't call UpdatePrivateBrowsing in AsyncOpen.
This bug is about calling UpdatePrivateBrowsing() unconditionally in AsyncOpen to pick up changes to the load info.
| Assignee | ||
Comment 1•5 years ago
|
||
See https://bugzilla.mozilla.org/show_bug.cgi?id=1670506#c10
The loadInfo mPrivateBrowsingId value could have changed between the creation
of the channel and calling AsyncOpen, so it's best to call it unconditionally.
Comment 3•5 years ago
|
||
| bugherder | ||
Description
•