Bug 1700866 - Call UpdatePrivateBrowsing() unconditionally in AsyncOpen r=necko-reviewers,dragana

See https://bugzilla.mozilla.org/show_bug.cgi?id=1670506#c10
The loadInfo mPrivateBrowsingId value could have changed between the creation
of the channel and calling AsyncOpen, so it's best to call it unconditionally.

Differential Revision: https://phabricator.services.mozilla.com/D111109